# velosiraptor-parser

./: Cargo.toml  LICENSE  README.md  rust-toolchain
.github/workflows/: build.yml  clippy.yml  format.yml  unit-lexer.yml  unit-parser.yml
lib/velosilexer/: Cargo.toml  README.md
lib/velosilexer/src/: bin.rs  error.rs  lib.rs  tokens.rs
lib/velosilexer/src/lexer/: comments.rs  identifier.rs  mod.rs  number.rs
lib/velosilexer/tests/: tests.rs
lib/velosilexer/tests/vrs/: lex_02_whitespace.vrs  lex_03_comments.vrs  lex_03_comments_expect.txt  lex_04_comments_fail.vrs  lex_04_comments_fail_expect.txt  lex_05_invalid_token.vrs  lex_05_invalid_token_expect.txt  lex_06_numbers.vrs  lex_06_numbers_expect.txt  lex_07_identifiers.vrs  lex_07_identifiers_expect.txt  lex_08_invalid_identifiers.vrs  lex_08_invalid_identifiers_expect.txt  lex_09_expressions.vrs  lex_09_expressions_expect.txt
src/: bin.rs  error.rs  lib.rs  utils.rs
src/parser/: constdef.rs  decorators.rs  expr.rs  flags.rs  import.rs  map.rs  method.rs  mod.rs  parameter.rs  terminals.rs  types.rs  unit.rs
src/parser/interface/: actions.rs  field.rs  layout.rs  mod.rs
src/parser/state/: fields.rs  mod.rs
src/parsetree/: consts.rs  decorator.rs  expr.rs  field.rs  identifier.rs  import.rs  interface.rs  map.rs  method.rs  mod.rs  params.rs  state.rs  types.rs  unit.rs
tests/: consts.rs  flags.rs  imports.rs  interface.rs  methods.rs  state.rs  types.rs
tests/utils/: mod.rs
tests/vrs/comments/: parsing.vrs
tests/vrs/consts/: const_00_defs.vrs  const_00_defs_expected.txt  const_01_imported.vrs  const_01_imported_expected.txt  const_02_unit.vrs  const_02_unit_expected.txt  const_03_expr.vrs  const_03_expr_expected.txt  const_04_missing_semicolon.vrs  const_04_missing_semicolon_expected.txt  const_05_missing_type.vrs  const_05_missing_type_expected.txt
tests/vrs/flags/: flags_00_global.vrs  flags_00_global_expected.txt  flags_01_unit.vrs  flags_01_unit_expected.txt  flags_02_global_eq.vrs  flags_02_global_eq_expected.txt  flags_03_global_body.vrs  flags_03_global_body_expected.txt  flags_04_global_flags.vrs  flags_04_global_flags_expected.txt
tests/vrs/imports/: import_00_basic.vrs  import_00_basic_expect.txt  import_01_multi.vrs  import_01_multi_expect.txt  import_02_recursive.vrs  import_02_recursive_expect.txt  import_03_diamond.vrs  import_03_diamond_2.vrs  import_03_diamond_expect.txt  import_04_non_existing.vrs  import_04_non_existing_expect.txt  import_05_recursive_non_existing.vrs  import_05_recursive_non_existing_expect.txt  import_06_self_circular.vrs  import_06_self_circular_expect.txt  import_07_circular.vrs  import_07_circular_1.vrs  import_07_circular_2.vrs  import_07_circular_expect.txt  (+4 more)
(+87 files in other folders)
