####################################################################################################
# Velosiparser Crate
####################################################################################################

[package]
name = "velosiparser"
description = "Library for parsing the Velosiraptor Language"
license = "MIT"
version = "1.0.0"
rust-version = "1.71"
authors = ["Reto Achermann <achreto@cs.ubc.ca>"]
edition = "2021"
readme = "README.md"
keywords = ["compiler", "parser", "nom"]
categories = ["compilers", "parser-implementations", "parsing"]

####################################################################################################
# Targets
####################################################################################################

[lib]
name = "velosiparser"
path = "src/lib.rs"

[[bin]]
name = "velosiparser"
path = "src/bin.rs"

####################################################################################################
# Dependencies
####################################################################################################

[dependencies]
nom = "7.1.3"
velosilexer = { path = "lib/velosilexer" }
colored = "2.0.0"
custom_error = "1.9.2"

# dependencies for testing
[dev-dependencies]
strip-ansi-escapes = "0.1.1"
